k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax-tracker
  namespace: tax-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tax-tracker
  template:
    metadata:
      labels:
        app: tax-tracker
    spec:
      containers:
        - name: app
          image: tax-tracker
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
