k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tax-tracker
  namespace: tax-tracker
spec:
  selector:
    app: tax-tracker
  ports:
    - name: http
      port: 80
      targetPort: 8085
